# pv

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IDEAS.md  IMPLEMENTATION.md  README.md  clippy.toml  design.pen  go.mod  go.sum  install.sh  main.go  main_test.go  opencode.json  plan.md  test_action_registration.sh
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  environment.rs  error.rs  lib.rs  output.rs  progress.rs  shell.rs
crates/cli/src/commands/: artifact_resource.rs  ca.rs  completions.rs  composer.rs  daemon.rs  dns.rs  doctor.rs  env.rs  init.rs  jobs.rs  logs.rs  mailpit.rs  mod.rs  mysql.rs  php.rs  ports.rs  postgres.rs  project.rs  redis.rs  rustfs.rs  setup.rs  status.rs  update.rs
crates/cli/tests/: ca.rs  composer.rs  daemon.rs  dns.rs  doctor.rs  jobs.rs  list_json.rs  logs.rs  mailpit.rs  mysql.rs  php.rs  ports.rs  postgres.rs  project_env.rs  project_open.rs  project_unlink.rs  redis.rs  rustfs.rs  setup.rs  status.rs  update.rs
crates/cli/tests/snapshots/: ca__ca_status_reports_local_and_system_trust_without_creating_files.snap  ca__ca_trust_generates_local_ca_and_defers_system_keychain_trust.snap  ca__ca_trust_generates_local_ca_and_trusts_system_keychain.snap  ca__ca_trust_removes_denied_system_ca_before_retrusting.snap  ca__ca_untrust_leaves_local_ca_files_and_defers_system_keychain_removal.snap  ca__ca_untrust_leaves_local_ca_files_and_removes_system_keychain_trust.snap  ca__ca_untrust_succeeds_when_system_trust_is_absent_and_preserves_local_ca_files.snap  composer__composer_install_does_not_record_php_pair_when_composer_install_fails.snap  composer__composer_install_prefers_global_php_default_track.snap  composer__composer_install_uses_cached_manifest_default_php_track.snap  composer__composer_install_uses_manifest_default_php_track_without_cached_manifest.snap  composer__composer_install_warns_when_newest_artifact_is_revoked.snap  composer__composer_shim_execs_installed_phar_through_php_shim.snap  composer__composer_shim_fails_clearly_when_composer_is_missing.snap  composer__composer_shim_forwards_help_and_version_flags.snap  composer__composer_shim_uses_cached_manifest_default_without_network.snap  composer__composer_uninstall_force_prune_queues_removal_intent.snap  composer__composer_update_updates_track_two_only.snap  composer__composer_update_warns_when_newest_artifact_is_revoked.snap  daemon__daemon_disable_refuses_non_pv_owned_launch_agent.snap  daemon__daemon_disable_removes_only_pv_owned_launch_agent.snap  daemon__daemon_enable_installs_pv_launch_agent_and_starts_it.snap  daemon__daemon_restart_replaces_stale_pv_owned_launch_agent.snap  dns__dns_install_prepares_resolver_config_without_touching_system_path.snap  dns__dns_install_reports_missing_daemon_after_installing_resolver_config.snap  dns__dns_install_reports_missing_daemon_without_installing_resolver_config.snap  dns__dns_install_reports_non_pv_owned_system_resolver_conflict.snap  dns__dns_install_writes_prepared_and_system_resolver_config.snap  dns__dns_status_reports_prepared_and_system_resolver_states.snap  dns__dns_uninstall_fails_when_system_resolver_cannot_be_inspected.snap  dns__dns_uninstall_removes_prepared_and_pv_owned_system_resolver_config.snap  dns__dns_uninstall_removes_prepared_config_and_defers_pv_owned_system_removal.snap  (+147 more)
crates/config/: Cargo.toml
crates/config/benches/: config.rs
crates/config/src/: discovery.rs  env.rs  error.rs  filesystem.rs  hostname.rs  init.rs  lib.rs  model.rs  parser.rs  writer.rs
crates/config/tests/: project_config.rs  project_env.rs  project_init.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  dns.rs  error.rs  gateway.rs  gateway_config.rs  jobs.rs  lib.rs  project_env.rs  protocol.rs  reconciliation.rs  server.rs  structured_log.rs  supervisor.rs  watcher.rs
crates/daemon/tests/: daemon_foundation.rs  fixture_contracts.rs  gateway_config.rs  gateway_reconciliation.rs  platform_preflight.rs  project_env_reconciliation.rs  real_artifact_gateway_e2e.rs  real_artifact_resource_matrix.rs  sql_foundation.rs  supervisor_foundation.rs
crates/macos/: Cargo.toml
crates/macos/src/: lib.rs
crates/macos/tests/: resolver_config.rs
crates/platform/: Cargo.toml
crates/platform/src/: browser.rs  ca.rs  capability.rs  command.rs  error.rs  launch_agent.rs  lib.rs  pf.rs  process.rs  resolver.rs  socket.rs  target.rs  trust.rs
crates/platform/tests/: launch_agent.rs  resolver_config.rs  unsupported_launch_agent.rs  unsupported_listener.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  event.rs  lib.rs  request.rs  response.rs  tests.rs  transport.rs  update_check.rs
crates/pv-release/: Cargo.toml
crates/pv-release/src/: app.rs  app_publication.rs  archive.rs  cli.rs  defaults.rs  error.rs  fixture.rs  lib.rs  main.rs  manifest.rs  publication.rs  recipe.rs  record.rs  record_writer.rs  relocation.rs  smoke.rs
crates/pv-release/tests/: app_installer.rs  app_publication.rs  app_release_records.rs  archive_validation.rs  manifest_defaults.rs  manifest_generation.rs  publication.rs  recipe_fixtures.rs  recipe_metadata.rs  record_writer.rs  release_docs.rs  release_records.rs  relocation_and_smoke.rs  smoke.rs  workflow_defaults.rs
crates/resources/: Cargo.toml  build.rs
crates/resources/src/: allocation.rs  cache.rs  command.rs  download.rs  endpoint.rs  error.rs  fs.rs  http.rs  identity.rs  install.rs  lib.rs  manifest.rs  php-defaults.ini  php_defaults.rs  php_extensions.rs  platform.rs  registry.rs  runtime.rs
crates/resources/tests/: artifact_cache_download.rs  artifact_install.rs  managed_resource_commands.rs  manifest_foundation.rs  php_defaults.rs  php_extensions.rs  resource_allocations.rs  runtime_adapters.rs
crates/self-update/: Cargo.toml
crates/self-update/src/: lib.rs
crates/self-update/tests/: app_update_manifest.rs
crates/state/: Cargo.toml
crates/state/src/: app_release.rs  backup.rs  database.rs  error.rs  fs.rs  lib.rs  migrations.rs  paths.rs  update_lock.rs
crates/state/tests/: state_foundation.rs
(+1585 files in other folders)
