[package]
name = "pv"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    ".",
    "crates/cli",
    "crates/config",
    "crates/daemon",
    "crates/macos",
    "crates/resources",
    "crates/state",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
camino = "1"
camino-tempfile = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
home = "0"
insta = { version = "1", features = ["filters"] }
rusqlite = { version = "0", features = ["bundled"] }
rustix = { version = "1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "signal", "sync"] }

[workspace.lints.clippy]
dbg_macro = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[lints]
workspace = true

[dependencies]
cli = { path = "crates/cli" }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
insta = { workspace = true }

[[test]]
name = "cli"
path = "it/cli.rs"
