[package]
name = "pv"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    ".",
    "crates/cli",
    "crates/config",
    "crates/daemon",
    "crates/macos",
    "crates/resources",
    "crates/state",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
camino = "1"
camino-tempfile = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fastrand = "2"
futures-util = { version = "0", features = ["sink"] }
hickory-proto = "0.26.1"
home = "0"
insta = { version = "1", features = ["filters"] }
netstat = { package = "netstat-esr", version = "0.8.1" }
rusqlite = { version = "0", features = ["bundled"] }
rustix = { version = "1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "signal", "sync", "time"] }
tokio-util = { version = "0", features = ["codec"] }
yaml_serde = "0.10.4"

[workspace.lints.clippy]
dbg_macro = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[lints]
workspace = true

[dependencies]
cli = { path = "crates/cli" }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
camino = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
state = { path = "crates/state" }

[[test]]
name = "cli"
path = "it/cli.rs"
