[package]
name = "pv"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    ".",
    "crates/cli",
    "crates/config",
    "crates/daemon",
    "crates/platform",
    "crates/protocol",
    "crates/pv-release",
    "crates/resources",
    "crates/state",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anstyle = "1.0.14"
anyhow = "1"
aws-sdk-s3 = { version = "1.135.0", default-features = false, features = ["rustls", "rt-tokio", "http-1x"] }
assert_cmd = "2"
camino = "1"
camino-tempfile = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
data-encoding = "2.11.0"
fastrand = "2"
futures-util = { version = "0", features = ["sink"] }
getrandom = "0.4.2"
flate2 = "1.1.9"
hickory-proto = "0.26.1"
home = "0"
insta = { version = "1", features = ["filters"] }
linemux = "0.3.0"
netstat = { package = "netstat-esr", version = "0.8.1" }
object_store = { version = "0.13.2", default-features = false, features = ["aws"] }
rcgen = { version = "0.14.8", features = ["x509-parser"] }
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp"] }
rusqlite = { version = "0", features = ["bundled"] }
rustls-pemfile = "2.2.0"
rustix = { version = "1", features = ["process"] }
security-framework = "3.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["mysql", "postgres", "runtime-tokio", "tls-rustls"] }
tar = "0.4.45"
thiserror = "2"
time = { version = "0", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "signal", "sync", "time"] }
tokio-util = { version = "0", features = ["codec"] }
toml = "1.1.2"
url = "2"
x509-parser = "0.18.1"
yaml_serde = "0.10.4"

[workspace.lints.clippy]
dbg_macro = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[lints]
workspace = true

[dependencies]
cli = { path = "crates/cli" }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
camino = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
state = { path = "crates/state" }

[[test]]
name = "cli"
path = "it/cli.rs"
