[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { path = "../config" }
daemon = { path = "../daemon" }
home = { workspace = true }
serde_json = { workspace = true }
state = { path = "../state" }
thiserror = { workspace = true }

[dev-dependencies]
camino-tempfile = { workspace = true }
insta = { workspace = true }
