[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { path = "../config" }
daemon = { path = "../daemon" }
home = { workspace = true }
linemux = { workspace = true }
platform = { path = "../platform" }
protocol = { path = "../protocol" }
resources = { path = "../resources" }
serde = { workspace = true }
serde_json = { workspace = true }
self-update = { path = "../self-update" }
state = { path = "../state" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
camino-tempfile = { workspace = true }
insta = { workspace = true }
