[package]
name = "cli"
version = "0.2.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { path = "../config" }
daemon = { path = "../daemon" }
home = { workspace = true }
indicatif = { workspace = true }
linemux = { workspace = true }
platform = { path = "../platform" }
protocol = { path = "../protocol" }
resources = { path = "../resources" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
self-update = { path = "../self-update" }
state = { path = "../state" }
thiserror = { workspace = true }
tokio = { workspace = true }
yaml_serde = { workspace = true }

[dev-dependencies]
camino-tempfile = { workspace = true }
insta = { workspace = true }
