[package]
name = "config"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
resources = { path = "../resources" }
serde = { workspace = true }
thiserror = { workspace = true }
yaml_serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino-tempfile = { workspace = true }
divan = { version = "4.7.0", package = "codspeed-divan-compat" }
insta = { workspace = true }

[[bench]]
name = "config"
harness = false
