[package]
name = "daemon"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
state = { path = "../state" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
