[package]
name = "daemon"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
config = { path = "../config" }
futures-util = { workspace = true }
hickory-proto = { workspace = true }
protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
resources = { path = "../resources" }
rustix = { workspace = true }
sqlx = { workspace = true }
state = { path = "../state" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
platform = { path = "../platform" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
