[package]
name = "daemon"
version = "0.1.4"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
aws-sdk-s3 = { workspace = true }
aws-smithy-http-client = { workspace = true }
camino = { workspace = true }
config = { path = "../config" }
futures-util = { workspace = true }
getrandom = { workspace = true }
hickory-proto = { workspace = true }
object_store = { workspace = true }
platform = { path = "../platform" }
protocol = { path = "../protocol" }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
resources = { path = "../resources" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustix = { workspace = true }
sqlx = { workspace = true }
state = { path = "../state" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
rcgen = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
