[package]
name = "macos"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
data-encoding = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
security-framework = { workspace = true }
sha2 = { workspace = true }
state = { path = "../state" }
thiserror = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
