[package]
name = "platform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
data-encoding = { workspace = true }
getrandom = { workspace = true }
netstat = { workspace = true }
plist = "1.9.0"
rcgen = { workspace = true }
rustix = { workspace = true }
rustls-pemfile = { workspace = true }
security-framework = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
state = { path = "../state" }
thiserror = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
