[package]
name = "protocol"
version = "0.1.3"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
resources = { path = "../resources" }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
