[package]
name = "resources"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
