[package]
name = "resources"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
flate2 = "1.1.9"
state = { path = "../state" }
tar = "0.4.45"
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
url = "2"

[dev-dependencies]
anyhow = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
