[package]
name = "state"
version = "0.2.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
fastrand = { workspace = true }
home = { workspace = true }
rusqlite = { workspace = true }
rustix = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
camino-tempfile = { workspace = true }
insta = { workspace = true }
